--- a/src/scss/theme.less
+++ b/src/scss/theme.less
@@ -50,16 +50,12 @@
     background: @light-green-color-3 !important;
     border-top: @border-light-green !important;
     border-bottom: @border-light-green !important;
-    padding-top: 7px !important;
-    padding-bottom: 7px !important;
   }
   & > td:first-child {
     border-left: @border-light-green !important;
-    padding-left: 7px !important;
   }
   & > td:nth-child(2) {
     border-right: @border-light-green !important;
-    padding-right: 7px !important;
   }
 
   @media (max-width: 1300px) {
